sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));
    ERS_IMPORT void ERS_Window_EndFrame(void* ptr);
    ERS_IMPORT bool ERS_Window_BeginRootDockSpace(void* ptr);
    ERS_IMPORT void ERS_Window_EndRootDockSpace(void* ptr);
    ERS_IMPORT uint32_t ERS_Window_GetRootDockSpaceID(void* ptr);
    ERS_IMPORT bool ERS_Window_Get_WantsClose(void* ptr);
    ERS_IMPORT void ERS_Window_Set_WantsClose(void* ptr, bool value);
    ERS_IMPORT void ERS_Window_SetWindowTitle(void* ptr, const char* title);
    ERS_IMPORT bool ERS_Window_SetWindowIcon(void* ptr, const char* path);
    ERS_IMPORT void ERS_EntityInspectorWidget_Window(void* simulatorPtr, EntityID entity, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_EntityInspectorWidget_Widget(void* simulatorPtr, EntityID entity);
    ERS_IMPORT void ERS_EntityInspectorWidget_EntityData(void* simulatorPtr, EntityID entity);
    ERS_IMPORT void ERS_EntityInspectorWidget_ComponentData(void* simulatorPtr, EntityID entity);
    ERS_IMPORT void ERS_EventInspectorWidget_Window(void* persistentEventPtr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_EventInspectorWidget_Widget(void* persistentEventPtr);
    ERS_IMPORT void ERS_EventInspectorWidget_EventDetails(void* persistentEventPtr);
    ERS_IMPORT void ERS_EventInspectorWidget_SyncEventDetails(void* persistentEventPtr);
    ERS_IMPORT void ERS_EventInspectorWidget_LocalEventDetails(void* persistentEventPtr);
    ERS_IMPORT void* ERS_EventTimelineWidget_Create();
    ERS_IMPORT void ERS_EventTimeLineWidget_Destroy(void* ptr);
    ERS_IMPORT bool ERS_EventTimelineWidget_Window(void* ptr, void* modelContainerPtr, void* persistentEventPtr, bool isRunning, const char* name, bool* open, int flags);
    ERS_IMPORT bool ERS_EventTimelineWidget_Widget(void* ptr, void* modelContainerPtr, void* persistentEventPtr, bool isRunning);
    ERS_IMPORT bool ERS_EventTimelineWidget_Get_ShowLocalEvents(void* ptr);
    ERS_IMPORT void ERS_EventTimelineWidget_Set_ShowLocalEvents(void* ptr, bool value);
    ERS_IMPORT bool ERS_EventTimelineWidget_Get_ShowSyncEvents(void* ptr);
    ERS_IMPORT void ERS_EventTimelineWidget_Set_ShowSyncEvents(void* ptr, bool value);
    ERS_IMPORT bool ERS_EventTimelineWidget_Get_AutoScroll(void* ptr);
    ERS_IMPORT void ERS_EventTimelineWidget_Set_AutoScroll(void* ptr, bool value);
    ERS_IMPORT size_t ERS_EventTimelineWidget_Get_MaxEvents(void* ptr);
    ERS_IMPORT void ERS_EventTimelineWidget_Set_MaxEvents(void* ptr, size_t value);
    ERS_IMPORT void* ERS_InspectorWidget_Create();
    ERS_IMPORT void ERS_InspectorWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_InspectorWidget_Window(void* ptr, uint8_t selectedType, void* modelContainerPtr, void* simulatorPtr, void* entitySimulatorPtr, EntityID entity, void* persistentEventPtr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_InspectorWidget_Widget(void* ptr, uint8_t selectedType, void* modelContainerPtr, void* simulatorPtr, void* entitySimulatorPtr, EntityID entity, void* persistentEventPtr);
    ERS_IMPORT void* ERS_LicensingWidget_Create();
    ERS_IMPORT void ERS_LicensingWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_LicensingWidget_Window(void* ptr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_LicensingWidget_Widget(void* ptr);
    ERS_IMPORT void* ERS_LogWidget_Create();
    ERS_IMPORT void ERS_LogWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_LogWidget_Window(void* ptr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_LogWidget_Widget(void* ptr);
    ERS_IMPORT int ERS_LogWidget_Get_SelectedLogLevel(void* ptr);
    ERS_IMPORT void ERS_LogWidget_Set_SelectedLogLevel(void* ptr, int logLevel);
    ERS_IMPORT bool ERS_LogWidget_Get_AutoScroll(void* ptr);
    ERS_IMPORT void ERS_LogWidget_Set_AutoScroll(void* ptr, bool autoScroll);
    ERS_IMPORT void ERS_ModelContainerInspectorWidget_Window(void* modelContainerPtr, const char* name, bool* open, int flags);
    ERS_IMPORT void ERS_ModelContainerInspectorWidget_Widget(void* modelContainerPtr);
    ERS_IMPORT void* ERS_ModelHierarchyWidget_Create();
    ERS_IMPORT void ERS_ModelHierarchyWidget_Destroy(void* ptr);
    ERS_IMPORT bool ERS_ModelHierarchyWidget_Window(void* ptr, void* modelContainerPtr, void** selectedSimulatorPtr, void** selectedEntitySimulatorPtr, EntityID* selectedEntity, uint8_t* selectedTypePtr, const char* name, bool* open, int flags);
    ERS_IMPORT bool ERS_ModelHierarchyWidget_Widget(void* modelContainerPtr, int treeNodeFlags, void** selectedSimulatorPtr, void** selectedEntitySimulatorPtr, EntityID* selectedEntity, uint8_t* selectedTypePtr);
    ERS_IMPORT void* ERS_ModelProgressionWidget_Create();
    ERS_IMPORT void ERS_ModelProgressionWidget_Destroy(void* ptr);
    ERS_IMPORT void* ERS_ModelProgressionWidget_Window(void* ptr, const void* modelContainerPtr, const char* name, bool* open, int flags);
    ERS_IMPORT void* ERS_ModelProgressionWidget_Widget(void* ptr, const void* modelContainerPtr);
    ERS_IMPORT void ERS_ModelProgressionWidget_Reset(void* ptr);
    ERS_IMPORT void* ERS_ModelStructureWidget_Create();
    ERS_IMPORT void ERS_ModelStructureWidget_Destroy(void* ptr);
    ERS_IMPORT void ERS_ModelStructureWidget_Window(void* ptr, void* modelContainerPtr, const char* name, bool* open, int flags);