sources/CSharp/src/ErsApiFunctions.cs


        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Window_EndFrame(IntPtr ptr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Window_BeginRootDockSpace(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Window_EndRootDockSpace(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_Window_GetRootDockSpaceID(IntPtr ptr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Window_Get_WantsClose(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Window_Set_WantsClose(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_Window_SetWindowTitle(IntPtr ptr, /* ASCII String */ byte* title);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_Window_SetWindowIcon(IntPtr ptr, /* ASCII String */ byte* path);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_EntityInspectorWidget_Window(IntPtr simulatorPtr, Entity entity, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EntityInspectorWidget_Widget(IntPtr simulatorPtr, Entity entity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EntityInspectorWidget_EntityData(IntPtr simulatorPtr, Entity entity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EntityInspectorWidget_ComponentData(IntPtr simulatorPtr, Entity entity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_EventInspectorWidget_Window(IntPtr persistentEventPtr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventInspectorWidget_Widget(IntPtr persistentEventPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventInspectorWidget_EventDetails(IntPtr persistentEventPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventInspectorWidget_SyncEventDetails(IntPtr persistentEventPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventInspectorWidget_LocalEventDetails(IntPtr persistentEventPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_EventTimelineWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventTimeLineWidget_Destroy(IntPtr ptr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_EventTimelineWidget_Window(IntPtr ptr, IntPtr modelContainerPtr, IntPtr persistentEventPtr, [MarshalAs(UnmanagedType.I1)] bool isRunning, /* ASCII String */ byte* name, bool* open, int flags);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_EventTimelineWidget_Widget(IntPtr ptr, IntPtr modelContainerPtr, IntPtr persistentEventPtr, [MarshalAs(UnmanagedType.I1)] bool isRunning);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_EventTimelineWidget_Get_ShowLocalEvents(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventTimelineWidget_Set_ShowLocalEvents(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_EventTimelineWidget_Get_ShowSyncEvents(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventTimelineWidget_Set_ShowSyncEvents(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_EventTimelineWidget_Get_AutoScroll(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventTimelineWidget_Set_AutoScroll(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_EventTimelineWidget_Get_MaxEvents(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_EventTimelineWidget_Set_MaxEvents(IntPtr ptr, nuint value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_InspectorWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_InspectorWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_InspectorWidget_Window(IntPtr ptr, byte selectedType, IntPtr modelContainerPtr, IntPtr simulatorPtr, IntPtr entitySimulatorPtr, Entity entity, IntPtr persistentEventPtr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_InspectorWidget_Widget(IntPtr ptr, byte selectedType, IntPtr modelContainerPtr, IntPtr simulatorPtr, IntPtr entitySimulatorPtr, Entity entity, IntPtr persistentEventPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_LicensingWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_LicensingWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_LicensingWidget_Window(IntPtr ptr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_LicensingWidget_Widget(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_LogWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_LogWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_LogWidget_Window(IntPtr ptr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_LogWidget_Widget(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ERS_LogWidget_Get_SelectedLogLevel(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_LogWidget_Set_SelectedLogLevel(IntPtr ptr, int logLevel);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_LogWidget_Get_AutoScroll(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_LogWidget_Set_AutoScroll(IntPtr ptr, [MarshalAs(UnmanagedType.I1)] bool autoScroll);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_ModelContainerInspectorWidget_Window(IntPtr modelContainerPtr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelContainerInspectorWidget_Widget(IntPtr modelContainerPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelHierarchyWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelHierarchyWidget_Destroy(IntPtr ptr);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_ModelHierarchyWidget_Window(IntPtr ptr, IntPtr modelContainerPtr, ref IntPtr selectedSimulatorPtr, ref IntPtr selectedEntitySimulatorPtr, ref Entity selectedEntity, ref byte selectedTypePtr, /* ASCII String */ byte* name, bool* open, int flags);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_ModelHierarchyWidget_Widget(IntPtr modelContainerPtr, int treeNodeFlags, ref IntPtr selectedSimulatorPtr, ref IntPtr selectedEntitySimulatorPtr, ref Entity selectedEntity, ref byte selectedTypePtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelProgressionWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelProgressionWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_ModelProgressionWidget_Window(IntPtr ptr, IntPtr modelContainerPtr, /* ASCII String */ byte* name, bool* open, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelProgressionWidget_Widget(IntPtr ptr, IntPtr modelContainerPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelProgressionWidget_Reset(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_ModelStructureWidget_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ModelStructureWidget_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_ModelStructureWidget_Window(IntPtr ptr, IntPtr modelContainerPtr, /* ASCII String */ byte* name, bool* open, int flags);
